formularios reseteados y mensajes de respuesta añadidos

--- a/view/citas-medico.html
+++ b/view/citas-medico.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Tabla de citas del médico</title>
+	<link rel="stylesheet" href="style.css">
     <style>
 		body {
 			font-family: Arial, sans-serif;
@@ -110,6 +111,7 @@
         <!-- Aquí se mostrarán las citas del médico -->
       </tbody>
     </table>
+	<div id="mensaje"></div>
   </body>
   <script src="../controller/citas.js"></script>
   <script src="../controller/paciente.js"></script>
