--- a/view/index.html
+++ b/view/index.html
@@ -39,10 +39,10 @@
 
 <body>
     <div class="container-index">
-        <a class="link-index" href="./registro-cita.php">Agendar una cita</a>
-        <a class="link-index" href="./registro-paciente.php">Registrar paciente</a>
-        <a class="link-index" href="./registro-medico.php">Registrar medico</a>
-        <a class="link-index" href="./citas-medico.php">Ingresar como medico</a>
+        <a class="link-index" href="./registro-cita.html">Agendar una cita</a>
+        <a class="link-index" href="./registro-paciente.html">Registrar paciente</a>
+        <a class="link-index" href="./registro-medico.html">Registrar medico</a>
+        <a class="link-index" href="./citas-medico.html">Ingresar como medico</a>
     </div>
 </body>
 
