--- a/view/registro-cita.html
+++ b/view/registro-cita.html
@@ -34,6 +34,7 @@
 
       <input id = "btn-agregar-cita" type="submit" value="Agendar" onclick="agregarCita(event)">
     </form>
+    <div id="mensaje"></div>
   </div>
   <script src="../controller/citas.js"></script>
   <script src="../controller/medico.js"></script>
