--- a/view/citas-medico.html
+++ b/view/citas-medico.html
@@ -86,6 +86,7 @@
   </head>
 
   <body onload="obtenerPacientes(event)">
+	<a href="./index.html" class="navigation-button">Inicio</a>
     <h1>Tabla de citas del médico</h1>
 
     <div class="input-container">
