--- a/view/registro-cita.html
+++ b/view/registro-cita.html
@@ -10,6 +10,10 @@
 </head>
 
 <body onload="obtenerMedicos()">
+
+  <a href="./index.html" class="navigation-button">Inicio</a>
+
+
   <div class="container">
     <h1>Agendar Cita</h1>
     <form class="formulario" id="formulario-cita">
