--- a/view/registro-medico.html
+++ b/view/registro-medico.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <a href="./index.html" class="navigation-button">Inicio</a>
+
     <div class="container">
         <h1>Registro de médico</h1>
         <form class="formulario" id="formulario-medico">
