--- a/view/registro-paciente.html
+++ b/view/registro-paciente.html
@@ -8,6 +8,8 @@
     <title>Registro de Paciente</title>
 </head>
 <body>
+    <a href="./index.html" class="navigation-button">Inicio</a>
+
     <div class="container">
 
         <h1>Registro de Paciente</h1>
