--- a/view/style.css
+++ b/view/style.css
@@ -119,3 +119,23 @@ body {
       opacity: 0;
     }
   }
+
+  .navigation-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: center;
+  }
+  
+  .navigation-button:hover {
+    background-color: #0069d9;
+  }
+  
+  .navigation-button:active {
+    background-color: #005cbf;
+  }
+  
