Se añadio que cambie el valor de cita dependiendo el regimen

--- a/view/registro-cita.html
+++ b/view/registro-cita.html
@@ -9,7 +9,7 @@
   <title>Citas</title>
 </head>
 
-<body onload="obtenerMedicos()">
+<body onload="obtenerMedicos(); obtenerPacientes(event)">
 
   <a href="./index.html" class="navigation-button">Inicio</a>
 
@@ -42,6 +42,7 @@
   </div>
   <script src="../controller/citas.js"></script>
   <script src="../controller/medico.js"></script>
+  <script src="../controller/paciente.js"></script>
   
 </body>
 
